1.create blog page 2.add profile_sidebar to the page

--- a/app/assets/templates/header_tpl.jst.hbs
+++ b/app/assets/templates/header_tpl.jst.hbs
@@ -11,11 +11,16 @@
           {{t "my_stream"}}
         </a>
     </span>
-
     <span>
         <a href="/activity">
           {{t "my_activity"}}
         </a>
+     </span>
+     <span>
+        <a href="/people/{{current_user.guid}}/blog">
+          {{t "my_blog"}}
+        </a>
+
      </span>
   </span>
 
