--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,8 @@
   - unless current_user
     .container{style: "position:relative;"}
       = link_to content_tag(:div, nil, class: 'diaspora_header_logo branding-header-logo'), root_path
-
+      = link_to t('streams.blog.title'), blog_stream_path
+      
       %ul#landing_nav
         - unless current_page?(controller: :registrations, action: :new)
           %li= link_to t('devise.shared.links.sign_up'), new_user_registration_path, class: 'login'
