--- a/app/assets/templates/header_tpl.jst.hbs
+++ b/app/assets/templates/header_tpl.jst.hbs
@@ -17,7 +17,8 @@
         </a>
      </span>
      <span>
-        <a href="/people/{{current_user.guid}}/blog">
+        <!--<a href="/people/{current_user.guid}/blog">-->
+        <a href="/people/{{current_user.id}}/blog/articles">
           {{t "my_blog"}}
         </a>
 
