--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
 			<%= truncate(article.content,length: 40) %>
 			<br>
 			<% if Like.where(:target_type=>"Article" , :target_id => article.id , :author_id => current_user.id ) != [] %>
-				<%= link_to("收回贊", article_like_path(article.id,Like.where(:target_type=>"Article" , :target_id => article.id , :author_id => current_user.id ) ) , :method=> :delete , :remote => true , "data-type" =>"json" )%>
+				<%= link_to("收回贊", article_like_path(article.id,Like.where(:target_type=>"Article" , :target_id => article.id , :author_id => current_user.id).first.id ) , :method=> :delete , :remote => true , "data-type" =>"json" )%>
 			<% else %>
 				<%= link_to("贊", article_likes_path(article.id) , :method=> :post , :remote => true , "data-type" =>"json" )%>
 			<% end %>
